// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for anonymous user 1`] = `
<DocumentFragment>
  <div>
    <h2>
      Welcome to the Korean Skincare App
    </h2>
    <p>
      Track your skincare products for each step of the 
      <a
        href="/korean-skincare-routine"
      >
        Korean Skincare Routine!
      </a>
    </p>
    <p>
      Have an account already? 
      <a
        href="/login"
      >
        Login!
      </a>
    </p>
    <p>
      Otherwise, 
      <a
        href="/register"
      >
        Register here
      </a>
      .
    </p>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot if logged in 1`] = `
<DocumentFragment>
  <div>
    <h2>
      Welcome back to the Korean Skincare App, testuser! 
    </h2>
    <p>
      We're excited for you to join us!
    </p>
    <a
      href="/user-routine"
    >
      <button
        class="btn btn-success"
      >
        Get Started
      </button>
    </a>
  </div>
</DocumentFragment>
`;
